nix-lexer/src/snapshots/nix_lexer__test__fixture@multiline_string_escaped_exit.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "let foo = ''hello'''world''; in foo\n"
input_file: nix-lexer/fixtures/multiline_string_escaped_exit.nix
---
[
    Let,
    Ident(
        "foo",
    ),
    Equals,
    MultilineString(
        [
            Content(
                "hello''",
            ),
            Content(
                "world",
            ),
        ],
    ),
    Semicolon,
    In,
    Ident(
        "foo",
    ),
]
