nix-lexer/src/snapshots/nix_lexer__test__fixture@string_double_dollar_escaped_interpolation.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "let x = \"hello $${cruel} world\"; in x\n"
input_file: nix-lexer/fixtures/string_double_dollar_escaped_interpolation.nix
---
[
    Let,
    Ident(
        "x",
    ),
    Equals,
    String(
        [
            Content(
                "hello $${cruel} world",
            ),
        ],
    ),
    Semicolon,
    In,
    Ident(
        "x",
    ),
]
