nix-lexer/src/snapshots/nix_lexer__test__fixture@string_escaped_exit.nix.snap
---
source: nix-lexer/src/lib.rs
expression: "let x = \"hello \\\"world\\\"\"; in x\n"
input_file: nix-lexer/fixtures/string_escaped_exit.nix
---
[
    Let,
    Ident(
        "x",
    ),
    Equals,
    String(
        [
            Content(
                "hello \\\"world\\\"",
            ),
        ],
    ),
    Semicolon,
    In,
    Ident(
        "x",
    ),
]
